--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.3.5",
     "sharp": "^0.32.5",
+    "starlight-blog": "^0.6.0",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
   }
