--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,9 @@
 {
   "extends": "astro/tsconfigs/strict",
+  "strictNullChecks": true,
+  "types": ["bun-types"],
+  "jsx": "react-jsx",
+  "jsxImportSource": "react",
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
